--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  background-image: url("src/assets/background.jpg");
+  background-color: #cccccc;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
