--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background-image: url("src/assets/background.jpg");
   background-color: #cccccc;
+  background-attachment: fixed;
 }
 
 #root {
