Updated background image to cover page and connected nav links to components

--- a/components/Skills.css
+++ b/components/Skills.css
@@ -3,7 +3,7 @@
     src: url(src/assets/TTFirsNeueTrialRegular.ttf);
 }
 
-.skills-section {
+#skills-section {
     text-align: left;
     margin-top: 100px;
     margin-left: 5%;
