--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   background-image: url("src/assets/background.jpg");
   background-color: #cccccc;
   background-attachment: fixed;
+  background-size: cover;
 }
 
 #root {
