--- a/components/Skills.css
+++ b/components/Skills.css
@@ -5,7 +5,7 @@
 
 #skills-section {
     text-align: left;
-    margin-top: 100px;
+    margin-top: 20%;
     margin-left: 5%;
     margin-right: 5%;
     color: white;
@@ -14,4 +14,10 @@
 
 .skills-title {
     font-size: 3.5em;
+}
+
+.tech {
+    font-size: 1.5em;
+    text-align: center;
+    margin-top: 5%;
 }
