--- a/components/NavBar.css
+++ b/components/NavBar.css
@@ -4,7 +4,7 @@
 }
 
 .nav-body {
-    background-color:rgb(240, 248, 255, 0.3);
+    background-color:white;
     font-family: TT Firs Neue Trl;
 }
 
