--- a/components/Projects.css
+++ b/components/Projects.css
@@ -5,11 +5,13 @@
 
 #projects-section {
     text-align: left;
-    margin-top: 20%;
-    margin-left: 5%;
-    margin-right: 5%;
-    color: white;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    color: black;
     font-family: TT Firs Neue Trl;
+    background-image: url("../src/assets/background4.png");
 }
 
 .project-description {
@@ -34,5 +36,5 @@
 .project-icon-links {
     font-size: 1.5em;
     padding-right: 1%;
-    color: white;
+    color: black;
 }
