--- a/components/Skills.css
+++ b/components/Skills.css
@@ -5,11 +5,15 @@
 
 #skills-section {
     text-align: left;
-    margin-top: 20%;
-    margin-left: 5%;
-    margin-right: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
     color: white;
     font-family: TT Firs Neue Trl;
+    background-image: url("../src/assets/background.jpg");
+    background-position-y: bottom;
+    background-position-x: right;
 }
 
 .skills-title {
@@ -18,6 +22,7 @@
 
 .tech {
     font-size: 1.5em;
+    line-height: 2;
     text-align: center;
-    margin-top: 5%;
+    /* margin-top: 5%; */
 }
