--- a/components/Skills.css
+++ b/components/Skills.css
@@ -12,6 +12,7 @@
     color: white;
     font-family: TT Firs Neue Trl;
     background-image: url("../src/assets/background.jpg");
+    background-size: cover;
     background-position-y: bottom;
     background-position-x: right;
 }
