--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,5 @@
 
 @font-face {
   font-family: TT Firs Neue Trl;
-  src: url(src/assets/TTFirsNeueTrialRegular.ttf);
+  src: url(/mmcgrath.github.io/src/assets/TTFirsNeueTrialRegular.ttf);
 }
