--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-#root {
-  text-align: center;
-  font-family: TT Firs Neue Trl;
-}
-
-@font-face {
-  font-family: TT Firs Neue Trl;
-  src: url("./assets/TTFirsNeueTrialRegular.ttf");
+.fixed-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #111113;
+  z-index: -1;
 }
