--- a/components/Projects.css
+++ b/components/Projects.css
@@ -1,35 +1,26 @@
-#projects-section {
-    text-align: left;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-left: 5%;
-    padding-right: 5%;
-    color: black;
-    background-image: url("../src/assets/background4.png");
-    background-size: cover;
-}
-
-.project-description {
-    margin-top: 5%;
-}
-
-.projects-title {
-    font-size: 3.5em;
-}
-
-.projects-sub-title {
-    font-size: 2.5em;
-    padding-right: 2%;
-    display: inline;
+.projects-section {
+  height: 80vh;
+  margin-top: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .project-gif {
-    width: 80%;
-    padding-bottom: 5%;
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  object-fit: cover;
 }
 
-.project-icon-links {
-    font-size: 1.5em;
-    padding-right: 1%;
-    color: black;
+.project-description {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.project-icon {
+  height: 20px;
+  width: 20px;
+  color: #9EB1FF;
 }
