--- a/components/Projects.css
+++ b/components/Projects.css
@@ -19,8 +19,6 @@
   justify-content: flex-start;
 }
 
-.project-icon {
-  height: 20px;
-  width: 20px;
-  color: #9EB1FF;
+.project-icons {
+  width: fit-content;
 }
