--- a/components/Introduction.css
+++ b/components/Introduction.css
@@ -6,3 +6,17 @@
   width: 250px;
   border-radius: 50%;
 }
+
+.responsive-align {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (min-width: 768px) {
+  .responsive-align {
+    text-align: left;
+    align-items: flex-start;
+  }
+}
